# operating-system

./: .dockerignore  .gitignore  Dockerfile  README.md  components.json  index.html  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
public/: manifest.webmanifest  site.webmanifest
src/: App.vue  main.ts  router.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: fonts.scss  index.css  tippy.css
src/components/apps/: EndernetApp.vue  LoginApp.vue  ServerApp.vue
src/components/desktop/: Desktop.vue
src/components/dock/: DockItem.vue
src/components/ui-examples/: AlertDemo.vue  AlertDestructiveDemo.vue  AspectRatioDemo.vue  AvatarDemo.vue  BadgeDestructiveDemo.vue  BadgeOutlineDemo.vue  BadgeSecondaryDemo.vue  ButtonAsChildDemo.vue  ButtonIconDemo.vue  ButtonLoadingDemo.vue  ButtonWithIconDemo.vue  CalendarDemo.vue  CardChat.vue  CardDemo.vue  CardFormDemo.vue  CardStats.vue  CheckboxDisabled.vue  CheckboxFormMultiple.vue  CheckboxFormSingle.vue  CheckboxWithText.vue  CollapsibleDemo.vue  ComboboxDemo.vue  ComboboxDropdownMenu.vue  ComboboxForm.vue  ComboboxPopover.vue  CommandDemo.vue  CommandDialogDemo.vue  ContextMenuDemo.vue  DataTableDemo.vue  DataTableDemoColumn.vue  DatePickerDemo.vue  DatePickerForm.vue  DatePickerWithPresets.vue  DatePickerWithRange.vue  DialogCustomCloseButton.vue  DialogDemo.vue  HoverCardDemo.vue  InputDemo.vue  (+37 more)
src/composables/: componentsMapping.ts  useAuth.ts  useUtility.ts  useWindow.ts
src/lib/: utils.ts
(+63 files in other folders)
